--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.4",
+    "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-native-community/datetimepicker": "6.2.0",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/core": "^6.2.1",
@@ -23,6 +24,7 @@
     "@react-navigation/stack": "^6.2.1",
     "@shoutem/ui": "^7.0.1",
     "@types/react": "~18.2.45",
+    "axios": "^1.7.7",
     "dotenv": "^16.4.5",
     "expo": "^51.0.0",
     "expo-dev-client": "~4.0.18",
@@ -39,10 +41,12 @@
     "react-native-gesture-handler": "~2.16.1",
     "react-native-gifted-charts": "^1.4.43",
     "react-native-linear-gradient": "2.8.3",
+    "react-native-loading-spinner-overlay": "^3.0.1",
+    "react-native-modal": "^13.0.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
-    "react-native-svg": "15.2.0",
+    "react-native-svg": "15.4.0",
     "react-native-toast-message": "^2.2.1",
     "react-native-webview": "11.23.0",
     "typescript": "~5.3.3"
