--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "wms_nojorono_(app)",
-    "slug": "wms_nojorono-staging",
+    "name": "merchandise_app",
+    "slug": "merchandise_app-staging",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -25,19 +25,27 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
       },
-      "package": "com.wms.nojorono"
+      "package": "com.merchandise_app.nna"
     },
     "web": {
       "favicon": "./assets/favicon.png"
     },
     "plugins": [
-      "expo-font"
+      "expo-font",
+      [
+        "expo-camera",
+        {
+          "cameraPermission": "Allow $(PRODUCT_NAME) to access your camera",
+          "microphonePermission": "Allow $(PRODUCT_NAME) to access your microphone",
+          "recordAudioAndroid": true
+        }
+      ]
     ],
     "extra": {
       "eas": {
         "projectId": "8ade3a32-1df4-4ce2-95f6-ccf17acb984e"
       }
     },
-    "owner": "sifuxxx"
+    "owner": "ebagarg"
   }
 }
