--- a/package.json
+++ b/package.json
@@ -27,10 +27,13 @@
     "axios": "^1.7.7",
     "dotenv": "^16.4.5",
     "expo": "^51.0.0",
+    "expo-camera": "^15.0.16",
     "expo-dev-client": "~4.0.18",
     "expo-font": "~12.0.7",
     "expo-image": "~1.12.12",
     "expo-linear-gradient": "~13.0.2",
+    "expo-location": "^17.0.1",
+    "expo-network": "^6.0.1",
     "expo-status-bar": "~1.12.1",
     "lottie-react-native": "6.7.0",
     "mobx": "^6.12.4",
@@ -49,6 +52,7 @@
     "react-native-svg": "15.4.0",
     "react-native-toast-message": "^2.2.1",
     "react-native-webview": "11.23.0",
+    "realm": "^12.13.2",
     "typescript": "~5.3.3"
   },
   "devDependencies": {
